DromasLpisChangeReview: header: Add conclusion select + react-select inverted styling

--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -62,6 +62,26 @@
 }
 
 
+/* ============ review ======================= */
+.ptr-dromasLpisChangeReviewHeader-topBar.review {
+	justify-content: space-between;
+}
+
+.ptr-dromasLpisChangeReviewHeader-topBar.review .ptr-ui-select.inverted .Select  {
+	border-color: rgba(255,255,255,.3);
+}
+.ptr-dromasLpisChangeReviewHeader-topBar.review .ptr-ui-select.inverted .Select .Select-control {
+	background-color: transparent;
+}
+
+.ptr-dromasLpisChangeReviewHeader-topBar.review .ptr-ui-select .Select .Select-control,
+.ptr-dromasLpisChangeReviewHeader-topBar.review .ptr-ui-select .Select .Select-placeholder,
+.ptr-dromasLpisChangeReviewHeader-topBar.review .ptr-ui-select .Select .Select-input {
+	height: 1.6rem;
+	line-height: 1.6rem;
+}
+
+
 /* ============ user actions ================== */
 .ptr-dromasLpisChangeReviewHeader-topBar.userActions {
 	justify-content: space-between;
