--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -87,6 +87,14 @@
 	justify-content: space-between;
 }
 
+#dromasLpisChangeReviewHeader-actions .ptr-dromasLpisChangeReviewHeader-content {
+	padding: 0 .5rem .5rem .5rem;
+}
+
+#dromasLpisChangeReviewHeader-actions .ptr-dromasLpisChangeReviewHeader-content > div > div {
+	margin-bottom: .3rem;
+}
+
 
 /* ============ map tools ===================== */
 .ptr-dromasLpisChangeReviewHeader-topBar.mapTools {
