ChangeReviewsTable# details mock

--- a/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
+++ b/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
@@ -43,3 +43,48 @@
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(5){
 	flex-basis: 11%;
 }
+
+/* details */
+.ptr-table-row-details.ptr-change-reviews-table-details {
+
+}
+.ptr-change-reviews-table-details-descriptions {
+	flex: 1;
+}
+.ptr-change-reviews-table-details-changes-info {
+	min-width: 10rem;
+}
+.ptr-change-reviews-table-details-section {
+	margin: 1rem 0 1.5rem;
+}
+.ptr-change-reviews-table-details-section.align-right {
+	margin-left: 2rem;
+	text-align: right;
+}
+.ptr-change-reviews-table-details-section > h3 {
+	font-size: .875rem;
+	font-weight: normal;
+	color: rgba(193,54,75,1);
+	margin-bottom: .5rem;
+	text-transform: uppercase;
+}
+.ptr-change-reviews-table-details-section > h4 {
+	font-size: .875rem;
+	font-weight: normal;
+	margin-bottom: .25rem;
+	color: rgba(65,69,81,1);
+}
+.ptr-change-reviews-table-details-section > p {
+	font-size: .8125rem;
+	font-weight: normal;
+	line-height: 1.2rem;
+	margin-bottom: 1rem;
+	max-width: 35rem;
+	color: rgba(85,89,101,1);
+}
+.ptr-change-reviews-table-details-user,
+.ptr-change-reviews-table-details-date {
+	font-size: .875rem;
+	margin-bottom: .25rem;
+	color: rgba(65,69,81,1);
+}
