ChangeReviewsTable#layout changed

--- a/src/index.css
+++ b/src/index.css
@@ -707,7 +707,7 @@ todo merge with overlay
 }
 .ptr-table-row-details {
 	display: none;
-	padding: 0 1.5rem 1.5rem;
+	margin-bottom: 1rem;
 	overflow: hidden;
 }
 .ptr-table-row-details.open {
