--- a/src/components/common/atoms/InputWrapper/style.css
+++ b/src/components/common/atoms/InputWrapper/style.css
@@ -1,4 +1,5 @@
 .ptr-input-wrapper {
+	position: relative;
 	border: 1px solid #aaa;
 	border-radius: .2rem;
 	padding: 1rem 1rem .7rem;
@@ -8,4 +9,17 @@
 .ptr-input-wrapper label span {
 	color: rgba(33,38,53,1);
 	font-size: .875rem;
+}
+.ptr-input-wrapper-required {
+	position: absolute;
+	top: 0;
+	right: 1rem;
+	display: block;
+	content: "Required";
+	background: #aaa;
+	font-size: .875rem;
+	line-height: 1.5rem;
+	padding: 0 .5rem;
+	border-radius: 0 0 .2rem .2rem;
+	color: #eee;
 }
