--- a/src/components/common/atoms/InputWrapper/style.css
+++ b/src/components/common/atoms/InputWrapper/style.css
@@ -2,9 +2,13 @@
 	position: relative;
 	border: 1px solid #aaa;
 	border-radius: .2rem;
-	padding: 1rem 1rem .7rem;
 	margin-bottom: 1.5rem;
 	box-shadow: 0.05rem 0.05rem 0.2rem 0 rgba(0, 0, 0, .07);
+}
+.ptr-input-wrapper > label,
+.ptr-input-wrapper > div:first-child {
+	display: block;
+	padding: 1rem;
 }
 .ptr-input-wrapper label span,
 .ptr-input-wrapper div span {
@@ -23,4 +27,11 @@
 	padding: 0 .5rem;
 	border-radius: 0 0 .2rem .2rem;
 	color: #eee;
+}
+.ptr-input-wrapper-info {
+	border-top: 1px solid rgba(0, 0, 0, .1);
+	font-size: .8125rem;
+	color: rgba(65,69,81,1);
+	padding: .5rem 1rem;
+	line-height: 1.5;
 }
