--- a/src/components/scopeSpecific/DromasLpisChangeReview/intro/ChangeReviewForm/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/intro/ChangeReviewForm/style.css
@@ -1,7 +1,7 @@
 .ptr-change-review-form {
 	width: 100%;
 	height: 100%;
-	background: rgba(208,212,220,1);
+	background: rgb(229, 229, 229);
 }
 
 .ptr-change-review-form-header {
