--- a/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
+++ b/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
@@ -39,6 +39,7 @@
 .ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select-menu-outer {
 	text-transform: none;
 	border: 0;
+	min-width: 200px;
 }
 .ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select-menu-outer .Select-option {
 	line-height: 1.45rem;
@@ -51,10 +52,12 @@
 }
 .ptr-table.change-reviews-table .ptr-table-header-item.buttons,
 .ptr-table.change-reviews-table .ptr-table-row-item.buttons {
-	min-width: 8rem;
+	min-width: 7rem;
+	justify-content: flex-end;
 }
 .ptr-table.change-reviews-table .ptr-table-row-item:first-child svg {
-	margin-left: -0.5rem
+	margin-left: -0.5rem;
+	min-width: 32px;
 }
 .ptr-table.change-reviews-table .ptr-table-header-item:nth-child(1),
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(1) {
@@ -62,22 +65,22 @@
 }
 .ptr-table.change-reviews-table .ptr-table-header-item:nth-child(2),
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(2) {
-	flex-basis: 24%;
+	flex-basis: 25%;
 }
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(2) {
 	font-weight: 600;
 }
 .ptr-table.change-reviews-table .ptr-table-header-item:nth-child(3),
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(3) {
-	flex-basis: 20%;
+	flex-basis: 15%;
 }
 .ptr-table.change-reviews-table .ptr-table-header-item:nth-child(4),
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(4) {
-	flex-basis: 20%;
+	flex-basis: 15%;
 }
 .ptr-table.change-reviews-table .ptr-table-header-item:nth-child(5),
 .ptr-table.change-reviews-table .ptr-table-row-item:nth-child(5){
-	flex-basis: 11%;
+	flex-basis: 20%;
 }
 
 /* details */
