--- a/src/components/presentation/Intro/Intro.css
+++ b/src/components/presentation/Intro/Intro.css
@@ -27,9 +27,8 @@
 	color: white;
 	/*background: rgba(153,54,75,.75);*/
 	background-image: linear-gradient(160deg, rgba(123,54,75,.85) 0%, rgba(193,54,75,.85) 100%);
-	padding: 3rem;
+	padding: 4rem 3rem;
 	text-align: center;
-	width: 100%;
 	z-index: 1;
 	position: relative;
 }
@@ -65,4 +64,15 @@
 }
 .intro-screen-content-text > p {
 	margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 90rem) {
+	.intro-screen-title {
+		font-size: 2.5rem;
+	}
+}
+@media screen and (max-width: 70rem) {
+	.intro-screen-title {
+		font-size: 2rem;
+	}
 }
