--- a/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
+++ b/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
@@ -26,8 +26,8 @@
 	display: flex;
 	flex-direction: column;
 	width: 30%;
-	min-width: 25rem;
-	max-width: 30rem;
+	min-width: 20rem;
+	max-width: 25rem;
 	margin: 3rem 0;
 	padding-top: 5px;
 	overflow: auto;
@@ -51,7 +51,7 @@
 .scopes-list-item {
 	padding-left: 2.5rem;
 	cursor: pointer;
-	font-size: 1.1rem;
+	font-size: 1.125rem;
 	font-weight: 300;
 	font-family: "Roboto", sans-serif;
 	color: rgb(204,207,211);
@@ -69,6 +69,39 @@
 .scope-intro-box {
 	background: white;
 	box-shadow: 0 0 2px 2px rgba(33,38,53,.5);
-	width: 100%;
+	width: 70%;
 	margin: 2rem 4rem 2rem 0;
+}
+
+@media screen and (max-width: 90rem) {
+	/* Scopes list */
+	.scopes-list {
+		width: 25%;
+		min-width: 18rem;
+	}
+	.scopes-list-item {
+		padding-left: 1.5rem;
+		font-size: 1.0625rem;
+		line-height: 3rem;
+	}
+	/* Scopes intro box */
+	.scope-intro-box {
+		width: 75%;
+		margin: 2rem 3rem 2rem 0;
+	}
+}
+@media screen and (max-width: 70rem) {
+	/* Scopes list */
+	.scopes-list {
+		min-width: 17rem;
+	}
+	.scopes-list-item {
+		padding-left: 1.25rem;
+		font-size: 1rem;
+		line-height: 2.8rem;
+	}
+	/* Scopes intro box */
+	.scope-intro-box {
+		margin: 1.5rem 2rem 1.5rem 0;
+	}
 }
