--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -12,22 +12,32 @@
 	background: #212635;
 }
 #dromasLpisChangeReviewHeader > div {
-	flex-grow: 1;
+	/*flex-grow: 1;*/
+}
+#dromasLpisChangeReviewHeader-back {
+	width: 2.5rem;
+}
+#dromasLpisChangeReviewHeader-back > div {
+	padding: .3rem .4rem;
 }
 #dromasLpisChangeReviewHeader-case {
-	width: 30%;
+	/*width: 30%;*/
+	flex-grow: 1;
 	/*background: #906;*/
 }
 #dromasLpisChangeReviewHeader-review {
-	width: 30%;
+	/*width: 30%;*/
+	flex-grow: 1;
 	/*background: #6e8;*/
 }
 #dromasLpisChangeReviewHeader-actions {
-	width: 20%;
+	/*width: 20%;*/
+	width: 20rem;
 	/*background: #f7a;*/
 }
 #dromasLpisChangeReviewHeader-tools {
-	width: 20%;
+	/*width: 20%;*/
+	width: 16rem;
 	color: #222;
 	/*background: #f6f3e2;*/
 	background: #fffdf7;
