--- a/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
+++ b/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
@@ -1,7 +1,7 @@
 /* === Change reviews table ==================================== */
 .ptr-table.change-reviews-table {
 	margin-top: -2rem;
-	height: calc(100% - 1.7rem);
+	height: calc(100% - 1.7rem + 2rem); /* account for margin */
 	width: 100%;
 }
 
