--- a/src/components/scopeSpecific/DromasLpisChangeReview/intro/ChangeReviewForm/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/intro/ChangeReviewForm/style.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100%;
 	background: rgb(229, 229, 229);
+	box-sizing: border-box;
 }
 
 .ptr-change-review-form-header {
@@ -34,7 +35,7 @@
 /* body */
 .ptr-change-review-form-body {
 	padding: 1.5rem;
-	height: calc(100% - 13rem);
+	height: calc(100% - 8rem);
 	overflow-y: auto;
 }
 .ptr-change-review-form-wrapper {
