DromasLpisChangeReview#Fuzzy search also in change_description

--- a/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
+++ b/src/components/presentation/controls/changeReviews/ChangeReviewsTable/ChangeReviewsTable.css
@@ -145,3 +145,8 @@
 	max-width: 35rem;
 	color: rgba(65,69,81,1);
 }
+.ptr-change-reviews-table-details-record p.highlighted > i {
+	background: yellow;
+	font-style: normal;
+	font-weight: bold;
+}
