--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -36,7 +36,7 @@
 }
 #dromasLpisChangeReviewHeader-actions {
 	/*width: 20%;*/
-	width: 20rem;
+	width: 21rem;
 	flex-shrink: 0;
 	/*background: #f7a;*/
 }
@@ -123,6 +123,17 @@
 
 #dromasLpisChangeReviewHeader-actions .ptr-dromasLpisChangeReviewHeader-content > div > div {
 	margin-bottom: .3rem;
+}
+
+.ptr-dromasLpisChangeReviewHeader-button-nextCase {
+	display: inline-block;
+	font-size: .6875rem;
+	line-height: .75rem;
+	width: 5.2rem;
+	padding: .03rem .1rem .03rem .5rem;
+	color: #aaa;
+	border-left: 1px solid rgba(255,255,255,.1);
+	margin-left: .3rem;
 }
 
 
