--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
    ================================================================ */
 
 body {
-	font-family: sans-serif;
+	font-family: "Open Sans", sans-serif;
 	margin: 0;
 	padding: 0;
 }
