MaxHeight fix for MS Edge

--- a/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
+++ b/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
@@ -76,6 +76,7 @@
 
 /* Scopes intro box */
 .scope-intro-box {
+	max-height: calc(-6rem + 100vh);
 	background: white;
 	box-shadow: 0 0 2px 2px rgba(33,38,53,.5);
 	width: 70%;
