--- a/src/components/presentation/atoms/InputFile/style.css
+++ b/src/components/presentation/atoms/InputFile/style.css
@@ -9,7 +9,8 @@
 	width: 100%;
 }
 
-textarea.ptr-editable-text:focus,
-textarea.ptr-editable-text.empty {
-	border: 1px dashed rgba(0,0,0,.5);
-}
+/* this should not be needed and if so, not here or more specific */
+/*textarea.ptr-editable-text:focus,*/
+/*textarea.ptr-editable-text.empty {*/
+	/*border: 1px dashed rgba(0,0,0,.5);*/
+/*}*/
