--- a/src/components/common/atoms/InputWrapper/style.css
+++ b/src/components/common/atoms/InputWrapper/style.css
@@ -20,13 +20,15 @@
 	top: 0;
 	right: 1rem;
 	display: block;
-	content: "Required";
-	background: #aaa;
+	/*content: "Required";*/
+	border: 1px solid #ccc;
+	border-top: 0;
 	font-size: .875rem;
 	line-height: 1.5rem;
 	padding: 0 .5rem;
 	border-radius: 0 0 .2rem .2rem;
-	color: #eee;
+	color: #8c8c8c;
+	box-shadow: rgba(125,125,125,.07) 1px 2px 3px 0;
 }
 .ptr-input-wrapper-info {
 	border-top: 1px solid rgba(0, 0, 0, .1);
