--- a/src/components/presentation/atoms/Input/Input.css
+++ b/src/components/presentation/atoms/Input/Input.css
@@ -1,12 +1,17 @@
 .ptr-input-text {
 	border-radius: .2rem;
 	margin: .3rem 0;
-	height: 2rem;
 	min-width: 10rem;
 	display: flex;
 	padding: 0 .5rem;
 	background: white;
 	border: 1px solid #aaa;
+}
+.ptr-input-text.input {
+	height: 2rem;
+}
+.ptr-input-text.multiline {
+	min-height: 2rem;
 }
 .ptr-input-text input {
 	border: 0;
@@ -15,6 +20,14 @@
 	color: rgba(33,38,53,1);
 	font-size: .9375rem;
 	flex: 1;
+}
+.ptr-input-text.multiline > div {
+	width: 100%;
+}
+.ptr-input-text.multiline .ptr-editable-text {
+	font-size: .9375rem;
+	padding: .25rem 0;
+	width: 100%;
 }
 .ptr-input-text .ptr-icon {
 	width: 1.4rem;
