Input#darker text color for required label

--- a/src/components/common/atoms/InputWrapper/style.css
+++ b/src/components/common/atoms/InputWrapper/style.css
@@ -27,7 +27,7 @@
 	line-height: 1.5rem;
 	padding: 0 .5rem;
 	border-radius: 0 0 .2rem .2rem;
-	color: #8c8c8c;
+	color: #777;
 	box-shadow: rgba(125,125,125,.07) 1px 2px 3px 0;
 }
 .ptr-input-wrapper-info {
