DromasLpisChangeReview#at least one of files with geometries must be provided

--- a/src/components/common/atoms/InputWrapper/style.css
+++ b/src/components/common/atoms/InputWrapper/style.css
@@ -37,3 +37,9 @@
 	padding: .5rem 1rem;
 	line-height: 1.5;
 }
+.ptr-input-wrapper > div > label {
+	display: block;
+}
+.ptr-input-wrapper > div > label:not(:first-of-type){
+	margin-top: 1rem;
+}
