--- a/src/components/presentation/Intro/Intro.css
+++ b/src/components/presentation/Intro/Intro.css
@@ -1,5 +1,6 @@
 .intro-screen {
 	overflow-x: hidden;
+	position: relative;
 	display: block;
 	height: 100%;
 }
@@ -36,6 +37,7 @@
 /* content */
 .intro-screen-content {
 	padding: 4rem 2rem;
+	position: relative;
 	display: flex;
 	flex: 1;
 	justify-content: center;
@@ -50,7 +52,7 @@
 	width: 100%;
 }
 .intro-screen-content-text {
-	font-size: 1.05rem;
+	font-size: 1.0625rem;
 	font-weight: 400;
 	color: rgb(65,69,81);
 	text-align: center;
@@ -64,6 +66,29 @@
 }
 .intro-screen-content-text > p {
 	margin-bottom: 1rem;
+}
+
+/* content section */
+.intro-screen-section {
+	padding: 1rem;
+}
+.intro-screen-section-title {
+	font-size: 1.5rem;
+	font-weight: 400;
+	color: rgb(65,69,81);
+	text-align: center;
+	margin-bottom: .2rem;
+}
+.intro-screen-section-content > p,
+.intro-screen-section-content > a  {
+	max-width: 40rem;
+	padding: .3rem 1rem .5rem;
+	color: rgb(65,69,81);
+	font-size: 1.0625rem;
+	text-align: center;
+}
+.intro-screen-section-content > a {
+	color: rgb(85,89,101);
 }
 
 @media screen and (max-width: 90rem) {
