--- a/src/components/presentation/atoms/Loader/Loader.css
+++ b/src/components/presentation/atoms/Loader/Loader.css
@@ -78,6 +78,7 @@ Apache license 2.0, Copyright (c) 2015 Tom Adamec */
 .c-loader-progress {
 	font-size: 1.15rem;
 	font-weight: 600;
+	z-index: 1;
 }
 .c-loader-container i.i1 {
 	animation: c-loader 1500ms linear infinite;
