--- a/src/view/widgets/inputs/multiselectbox/MultiSelectBox.css
+++ b/src/view/widgets/inputs/multiselectbox/MultiSelectBox.css
@@ -1,3 +1,14 @@
+.select-menu-box .multiselect-menu {
+	max-height: 300px;
+	overflow-y: auto;
+	border: 1px solid #bbb;
+	padding: .5rem;
+}
+
+.multiselect-all-container {
+	margin-bottom: .5rem;
+}
+
 .ui-checkboxradio-label {
 	margin: .1rem;
 	transition: background .3s;
@@ -16,23 +27,23 @@
 	box-shadow: none;
 }
 
-.label-multiselect-option {
+.select-menu-box .label-multiselect-option {
 	padding: .3rem 1rem;
 }
-.label-multiselect-option.ui-state-active {
+.select-menu-box .label-multiselect-option.ui-state-active {
 	padding: .3rem .7rem .25rem 1.3rem;
 }
-.label-multiselect-option.ui-state-active:before {
+.select-menu-box .label-multiselect-option.ui-state-active:before {
 	content: url("../../../../img/check.png");
 	position: absolute;
 	left: .5rem;
 }
-.label-multiselect-select-all,
-.label-multiselect-clear-all,
-.label-multiselect-select-all:hover,
-.label-multiselect-clear-all:hover,
-.label-multiselect-select-all.ui-state-active.ui-checkboxradio-checked,
-.label-multiselect-clear-all.ui-state-active.ui-checkboxradio-checked {
+.select-menu-box .label-multiselect-select-all,
+.select-menu-box .label-multiselect-clear-all,
+.select-menu-box .label-multiselect-select-all:hover,
+.select-menu-box .label-multiselect-clear-all:hover,
+.select-menu-box .label-multiselect-select-all.ui-state-active.ui-checkboxradio-checked,
+.select-menu-box .label-multiselect-clear-all.ui-state-active.ui-checkboxradio-checked {
 	background: none;
 	border: 0;
 	font-family: "Open sans", sans-serif;
@@ -40,42 +51,44 @@
 	font-size: .7rem;
 	padding: .2rem .4rem .1rem 1.1rem;
 }
-.widgets label.label-multiselect-select-all,
-.widgets label.label-multiselect-select-all.ui-state-active.ui-checkboxradio-checked {
+.select-menu-box label.label-multiselect-select-all,
+.select-menu-box label.label-multiselect-select-all.ui-state-active.ui-checkboxradio-checked {
 	font-size: .7rem;
 	color: rgba(201, 45, 66, .7);
 	transition: color .3s;
 }
-.widgets label.label-multiselect-clear-all,
-.widgets label.label-multiselect-clear-all.ui-state-active.ui-checkboxradio-checked {
+.select-menu-box label.label-multiselect-clear-all,
+.select-menu-box label.label-multiselect-clear-all.ui-state-active.ui-checkboxradio-checked {
 	font-size: .7rem;
 	color: rgba(96, 96, 96, .7);
 	transition: color .3s;
 }
-.widgets label.label-multiselect-select-all:hover {
+.select-menu-box label.label-multiselect-select-all:hover,
+.select-menu-box label.label-multiselect-select-all.ui-state-active:hover {
 	color: rgba(201, 45, 66, 1);
 }
-.widgets label.label-multiselect-clear-all:hover {
+.select-menu-box label.label-multiselect-clear-all:hover,
+.select-menu-box label.label-multiselect-clear-all.ui-state-active:hover {
 	color: rgba(96, 96, 96, 1);
 }
 
-.label-multiselect-select-all:before, .label-multiselect-clear-all:before {
+.select-menu-box .label-multiselect-select-all:before, .label-multiselect-clear-all:before {
 	position: absolute;
 	left: .2rem;
 }
-.label-multiselect-select-all:before {
+.select-menu-box .label-multiselect-select-all:before {
 	content: url("../../../../img/check-colored.png");
 	opacity: .7;
 	transition: opacity .3s;
 }
-.label-multiselect-clear-all:before {
+.select-menu-box .label-multiselect-clear-all:before {
 	content: url("../../../../img/uncheck.png");
 	opacity: .7;
 	transition: opacity .3s;
 }
-.label-multiselect-select-all:hover:before {
+.select-menu-box .label-multiselect-select-all:hover:before {
 	opacity: 1;
 }
-.label-multiselect-clear-all:hover:before {
+.select-menu-box .label-multiselect-clear-all:hover:before {
 	opacity: 1;
 }
